k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/component: web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: django
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: django
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: django
          image: docker.io/e4ekaterina123/django_app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: pgssl
              mountPath: /certs
              readOnly: true

      volumes:
        - name: pgssl
          secret:
            secretName: postgres-ssl
            items:
              - key: root.crt
                path: root.crt
