k8s/django-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django
  labels:
     app.kubernetes.io/name: django
     app.kubernetes.io/component: web
     app.kubernetes.io/part-of: k8s-test-django
spec:
  containers:
    - name: django
      image: docker.io/e4ekaterina123/django_app:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
  restartPolicy: Always
