k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  labels:
    app.kubernetes.io/name: django
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: django
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: 80
